--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/*shopping list -css*/
 * {
   box-sizing: border-box;
 }
@@ -45,3 +46,4 @@ button:hover {
 .shopping-item__checked {
   text-decoration: line-through;
 }
+
